# trashsort

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/eval/: labels.csv
scripts/: add_groceries.py  build_eval.py  download_groceries.py  download_organic.py  download_trashnet.py
src/trashsort/: app.py  augmentation.py  bins.py  clip_recognizer.py  config.py  dataset.py  eval_bins.py  evaluate.py  frame.py  infer.py  items.py  model.py  preprocessing.py  train.py
