[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trashsort"
version = "0.1.0"
description = "A smart trash sorter that recognizes items and tells you which German recycling bin it belongs in"
requires-python = ">=3.10"

[project.optional-dependencies]
app = ["gradio>=4"]

[tool.setuptools.packages.find]
where = ["src"]
